# conduit

./: .gitignore  .gitmodules  BaconPaulTODO.md  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml
.github/workflows/: build-pr.yml  build-release.yml
cmake/: git-info.cmake  version.cpp.in  version.h  versiontools.cmake
libs/sst-clap-juce-shim/src/sst/clap_juce_shim/: clap_juce_shim_impl.cpp
libs/sst/sst-clap-helpers/: CMakeLists.txt
libs/sst/sst-clap-helpers-orig/: CMakeLists.txt  README.md
libs/sst/sst-clap-helpers-orig/include/sst/clap_juce_shim/: clap_juce_shim.h
libs/sst/sst-clap-helpers/include/sst/clap_juce_shim/: clap_juce_shim.h
libs/sst/sst-clap-helpers/src/sst/clap_juce_shim/: clap_juce_shim_impl.cpp  clap_juce_shim_impl.mm
libs/sst/sst-clap-juce-shim/: CMakeLists.txt
libs/sst/sst-clap-juce-shim/include/sst/clap_juce_shim/: clap_juce_shim.h
libs/sst/sst-clap-juce-shim/src/sst/clap_juce_shim/: clap_juce_shim_impl.cpp  clap_juce_shim_impl.mm
resources/: CMakeLists.txt  NightlyBlurb.md  README.rtf
scripts/: fix_file_comments.pl  fix_header_guards.pl  mac_installer.sh
src/: CMakeLists.txt  clap-saw-demo.cpp  clap-saw-demo.h  clap-saw-juicy-entry.cpp  clap-saw-juicy.cpp  clap-saw-juicy.h  conduit-clap-entry.cpp  conduit-polysynth-entry.cpp  conduit-polysynth.cpp  conduit-polysynth.h  debug-helpers.h  juce-details-mac.mm  juce-editor.cpp  saw-voice.cpp  saw-voice.h
src/chord-memory/: CMakeLists.txt  chord-memory-editor.cpp  chord-memory.cpp  chord-memory.h
src/clap-event-monitor/: CMakeLists.txt  clap-event-monitor-editor.cpp  clap-event-monitor.cpp  clap-event-monitor.h
src/conduit-shared/: CMakeLists.txt  clap-base-class.h  debug-helpers.h  editor-base.cpp  editor-base.h  shared-symbols.cpp  spsc-queue.h  sse-include.h
src/midi2-sawsynth/: CMakeLists.txt  midi2-sawsynth-editor.cpp  midi2-sawsynth.cpp  midi2-sawsynth.h  ni-midi-patches.h
src/mts-to-noteexpression/: CMakeLists.txt  mts-to-noteexpression-editor.cpp  mts-to-noteexpression.cpp  mts-to-noteexpression.h
src/multiout-synth/: CMakeLists.txt  multiout-synth-editor.cpp  multiout-synth.cpp  multiout-synth.h
src/polymetric-delay/: CMakeLists.txt  polymetric-delay-editor.cpp  polymetric-delay.cpp  polymetric-delay.h
src/polysynth/: CMakeLists.txt  effects-impl.h  modmatrix.h  polysynth-editor.cpp  polysynth.cpp  polysynth.h  saw-voice.cpp  saw-voice.h  voice.cpp  voice.h
src/ring-modulator/: CMakeLists.txt  ring-modulator-editor.cpp  ring-modulator.cpp  ring-modulator.h
